NetBSD Problem Report #55705

From kardel@kardel.name  Thu Oct  8 10:30:35 2020
Return-Path: <kardel@kardel.name>
Received: from mail.netbsd.org (mail.netbsd.org [199.233.217.200])
	(using TLSv1.2 with cipher ECDHE-RSA-AES256-GCM-SHA384 (256/256 bits))
	(Client CN "mail.NetBSD.org", Issuer "mail.NetBSD.org CA" (not verified))
	by mollari.NetBSD.org (Postfix) with ESMTPS id 951FC1A9239
	for <gnats-bugs@gnats.NetBSD.org>; Thu,  8 Oct 2020 10:30:35 +0000 (UTC)
Message-Id: <20201008103030.169C3AAAC81A@pip.kardel.name>
Date: Thu,  8 Oct 2020 12:30:30 +0200 (CEST)
From: kardel@netbsd.org
Reply-To: kardel@netbsd.org
To: gnats-bugs@NetBSD.org
Subject: ZFS: dmu_tx_delay may attempt to sleep with negative time - panic: "to_ticks >= 0" failed
X-Send-Pr-Version: 3.95

>Number:         55705
>Category:       kern
>Synopsis:       ZFS: dmu_tx_delay may attempt to sleep with negative time - panic: "to_ticks >= 0" failed
>Confidential:   no
>Severity:       critical
>Priority:       high
>Responsible:    kern-bug-people
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Thu Oct 08 10:35:00 +0000 2020
>Closed-Date:    Fri Oct 09 08:25:11 +0000 2020
>Last-Modified:  Fri Oct 09 08:25:11 +0000 2020
>Originator:     Frank Kardel
>Release:        NetBSD 9.99.73
>Organization:

>Environment:


System: NetBSD pip 9.99.73 NetBSD 9.99.73 (PIPGEN) #0: Tue Oct 6 22:46:19 CEST 2020 kardel@pip:/src/NetBSD/cur/src/obj.amd64/sys/arch/amd64/compile/PIPGEN amd64
Architecture: x86_64
Machine: amd64
>Description:
	ZFS panics due to negative wait time in dmu_tx_delay.
Hand copied stack:
callout_schedule_locked()
sleepq_block()
dmu_tx_wait at zfs:dmu_tx_wait+0x25c -> dmu_tx.c:1158
dmu_tx_assign()
zfs_write()
zfs_netbsd_write()
VOP_WRITE()
vn_write()
dofilewrite()
sys_write()
syscall()
>How-To-Repeat:
	do massive copies to zfs file system
>Fix:
	ignore negative timeouts?

>Release-Note:

>Audit-Trail:
From: "Frank Kardel" <kardel@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/55705 CVS commit: src/external/cddl/osnet/dist/uts/common/fs/zfs
Date: Fri, 9 Oct 2020 08:18:01 +0000

 Module Name:	src
 Committed By:	kardel
 Date:		Fri Oct  9 08:18:01 UTC 2020

 Modified Files:
 	src/external/cddl/osnet/dist/uts/common/fs/zfs: dmu_tx.c

 Log Message:
 PR kern/55705:
 don't attempt to sleep for negative time, we are late anyway - avoids DIAGNOSTIC panic


 To generate a diff of this commit:
 cvs rdiff -u -r1.5 -r1.6 \
     src/external/cddl/osnet/dist/uts/common/fs/zfs/dmu_tx.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->closed
State-Changed-By: kardel@NetBSD.org
State-Changed-When: Fri, 09 Oct 2020 08:25:11 +0000
State-Changed-Why:
fix commited.


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.46 2020/01/03 16:35:01 leot Exp $
$NetBSD: gnats_config.sh,v 1.9 2014/08/02 14:16:04 spz Exp $
Copyright © 1994-2020 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.