PR kern/55705: don't attempt to sleep for negative time, we are late anyway - avoids DIAGNOSTIC panic